Alignment fixes on mobile.

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -5,7 +5,7 @@
 		font-weight: 900;
 
 		@include mq(768px) {
-			margin: 3rem 1rem;
+			margin: 3rem 4rem;
 			font-size: 1rem;
 		}
 	}
@@ -15,13 +15,16 @@
 		color: gray;
 
 		@include mq(768px) {
-			margin: 3rem -0.5rem;
-			width: 95%;
-			// font-size: 1rem;
+			margin: 3rem 4.5rem;
+			width: 65%;
 		}
 
 		.list {
 			padding-left: 3rem;
+
+			@include mq(768px) {
+				padding-left: 1rem;
+			}
 
 			.item {
 				margin-bottom: 2rem;
