--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -7,7 +7,7 @@
 	}
 
 	.backdrop {
-		height: 100vh;
+		height: 110vh;
 		width: 100%;
 		object-fit: cover;
 
